# daphneZMQ

./: .gitignore  CMakeLists.txt  DaphneSlowController.desktop.in  README.md  diag_trigger.sh
bash_scripts/: AFE_peek_poke_test.sh  dump_afe_alignment_register.sh  peek_bitslip_tap_registers.sh  reset_bitslip_tap_registers.sh  run_with_gdbserver.sh  vgain_scan.ps1  vgain_scan.sh
client/: afe_function_v2.py  analyze_waveform_dataset.py  client_dictionaries.py  compare_configure_envelopes.py  configure_fe_from_detail.py  configure_fe_from_output.py  configure_fe_min.py  configure_fe_min_v2.py  endpoint.py  hdmezz_control_v2.py  led_charge.py  osc.py  pds_configure_utils.py  plot_waveform_metrics.py  protobuf_acquire_channel.py  protobuf_acquire_list_channels.py  protobuf_client_afeFunction_test.py  protobuf_client_bias_test.py  protobuf_client_offset_test.py  protobuf_client_spybuffer_dump.py  protobuf_client_test.py  protobuf_client_trim_test.py  protobuf_client_vgain_test.py  protobuf_configure_afeFunction.py  protobuf_configure_daphne.py  protobuf_configure_daphne_v2.py  protobuf_configure_offset.py  protobuf_configure_vbias_trim.py  protobuf_configure_vgain.py  protobuf_full_smoketest_v2.py  protobuf_oscilloscope.py  ps_mio_spi_gpio_board.py  ps_mio_spi_gpio_remote.py  read_binary_waveforms.py  read_fe_state_v2.py  read_general_info_v2.py  read_osc_data.py  slowcontrol_smoketest.py  ssp_inspect  ssp_led_control.py  (+12 more)
client/dynamic_range_led/: README.md  analyze_led_snr_scan.cpp  analyze_single_channel_pe.py  build_analyze_led_snr_scan.sh  fit_cpp_histograms_parallel.py  make_best_group_sheet.py  make_channel_thumbnail_sheets.py  make_channel_vector_contact_sheets.py  merge_led_intensity_runs.py  monitor_led_run.py  per_channel_closest_offsets_target_2000_combined.csv  per_channel_target2k_vgain0500.json  per_channel_target2k_vgain0750.json  per_channel_target2k_vgain1000.json  per_channel_target2k_vgain1250.json  per_channel_target2k_vgain1500.json  per_channel_target2k_vgain1750.json  per_channel_target2k_vgain2000.json  per_channel_target2k_vgain2250.json  per_channel_target2k_vgain2500.json  per_channel_target2k_vgain2750.json  per_channel_target2k_vgain3000.json  plot_all_led_histograms.py  plot_best_led_snr_publication.py  plot_led_mean_waveform_overlays.py  plot_led_waveform_examples.py  plot_snr_vs_vgain.py  reanalyze_led_charge_run.py  retro_charge_fit.py  scan_led_intensity_charge.py  scan_led_vgain_sweep.py  scan_runtime.py  source_paths.json  summary_by_vgain_target_2000_combined.csv
client/envelope_dumps/: cli_configure_request.json  seed_configure_request.json
cmake/: daphne_deps.cmake
configs/: README.md  led_run_defaults.json
docs/: NOISE_METRICS_CHEATSHEET.md  bringup-validation.md  daphne_mezz_spi_context.md  endpoint-safety-contract.md  frontend-safety-contract.md  hd-mezz-digital-context.md  hdmezz-control-panel-context.md  ps-mio-spi-gpio-standalone.md
kernel/adc1283-gpio/: README.md  adc1283-gpio.c
scripts/: analyze_dark_vgain_scan.py  analyze_mar17_hd.sh  analyze_noise_fft_batch.py  apply_mezz0_adc1283_gpio_overlay.sh  compare_and_sync_runs_to_lxplus.sh  make_deploy_bundle.sh  make_deps_tarball_from_prefix.sh  petalinux_build.sh  petalinux_build_standalone.sh  plot_dark_vgain_fft_overlays.py  plot_no_bias_fft_selector.py  plot_no_bias_noise_dashboard.py  run_367_led_scan_remote.sh  run_dark_vgain_scan_remote.sh  run_dark_vgain_scan_via_tunnel.sh  run_hd_best_points_remote.sh  run_hd_intensity_scan_remote.sh  run_led_bias_scan_remote.sh  run_led_vgain_bias_scan_remote.sh  run_led_vgain_bias_scan_via_tunnel.sh  run_mar11_led_plan.sh  run_mar12_led_plan.sh  run_mar13_led_plan.sh  run_mar14_led_plan.sh  run_mar17_led_plan.sh  run_mar24_led_repeats_remote.sh  run_mar24_led_repeats_supervised.sh  run_ppulse_osc_d_scan.sh  run_sof_led_scan_remote.sh  run_vd_afe0_vgain_bias_retake_remote.sh  run_vd_afe0_vgain_bias_retake_supervised.sh  run_vgain_trim_scan_via_tunnel.sh  study_no_bias_noise_runs.py  vgain_scan.sh
srcs/: .DaphneSlowController.cpp.swp  Afe.cpp  Afe.hpp  Dac.cpp  Dac.hpp  Daphne.cpp  Daphne.hpp  DaphneI2CDrivers.cpp  DaphneI2CDrivers.hpp  DaphneSlowController.cpp  DaphneSpiDrivers.cpp  DaphneSpiDrivers.hpp  DevMem.cpp  DevMem.hpp  Endpoint.cpp  Endpoint.hpp  FpgaReg.cpp  FpgaReg.hpp  FpgaRegDict.cpp  FpgaRegDict.hpp  FrontEnd.cpp  FrontEnd.hpp  I2CDevice.cpp  I2CDevice.hpp  MezzCommon.hpp  Spi.cpp  Spi.hpp  SpiDevice.cpp  SpiDevice.hpp  SpyBuffer.cpp  SpyBuffer.hpp  daphne_test.cpp  defines.hpp  protobuf_client_test.py  publisher.cpp  reg.cpp  reg.hpp  requester_vector.py  requestor.py  srv.cpp  (+4 more)
srcs/configurations/: default_conf.json
srcs/protobuf/: __init__.py  daphneV3_high_level_confs.pb.cc  daphneV3_high_level_confs.pb.h  daphneV3_high_level_confs.proto  daphneV3_high_level_confs_pb2.py  daphneV3_low_level_confs.pb.cc  daphneV3_low_level_confs.pb.h  daphneV3_low_level_confs.proto  daphneV3_low_level_confs_pb2.py  np02-daphne-running.json
srcs/server_controller/: bounded_queue.hpp  handlers.cpp  handlers.hpp  main.cpp  monitoring.cpp  monitoring.hpp  router_server.cpp  router_server.hpp  spybuffer_chunker.cpp  spybuffer_chunker.hpp  v2_envelope.hpp
toolchains/: aarch64-petalinux.cmake
utils/: HOWTO_RECOVER_D15_FROM_GOLDEN_20260312.tex  HOWTO_REFLASH_D15_FROM_BRIDGE.md  HOWTO_USB_BLANK_BOARD.md  align_all_afes.py  bootstrap_blank_board.sh  check_bringup_chain.sh  clk_conf.sh  d15_golden_dtb_stage.tcl  d15_golden_ram_boot.tcl  deploy_ff0b_network.sh  diag_trigger.sh  endpoint.sh  ff0b_board_inventory.csv  install_ff0b_network.sh  pl_load_diagnose.sh  read_mem.sh  read_thresholds.sh  run_client_via_tunnel.sh  safe_reconfig.sh  serve_d15_golden.sh  set_thresholds.sh  setup_firmware_service.sh  web_proxy.sh  write_thresholds.sh
